k8s/prod/client/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: asia.gcr.io/run-app-341001/reactapp:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "20m"
          ports:
            - containerPort: 80
              name: nginx-port
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx
              readOnly: true
              name: nginx-conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
