k8s/prod/client/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: nginx-port
      nodePort: 30090
